--- a/test/parallax.css
+++ b/test/parallax.css
@@ -441,19 +441,24 @@ header[data-current-product="matcha"]::before {
         display: block !important;
         position: fixed;
         top: 30px;
-        right: 30px;
+        right: 50px;
+        /* Gleiche Position wie die rechte Linie */
         z-index: 20;
-        width: 30px;
-        height: 30px;
+        width: 24px;
+        /* Kleiner: war 30px */
+        height: 24px;
+        /* Kleiner: war 30px */
         cursor: pointer;
     }
 
     .burger-menu span {
         display: block;
         width: 100%;
-        height: 3px;
+        height: 2px;
+        /* Dünner: war 3px */
         background: white;
-        margin: 6px 0;
+        margin: 5px 0;
+        /* Weniger Abstand: war 6px */
         transition: 0.3s;
         border-radius: 2px;
     }
